--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/images/home.png
     - assets/images/btnFor.png
     - assets/images/cart.png
+    - assets/images/protect.png
 
   #   - images/a_dot_ham.jpeg
 
