--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
   carousel_slider: ^4.2.1
   video_player: ^2.7.0
   flutter_chat_ui: ^1.6.9
+  flutter_map: ^5.0.0
 #  mapbox_gl: ^0.16.0
 
 
